# finance_api

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: __init__.py  accounts.py  auth.py  cashflow.py  health.py  holdings.py  net_worth.py  plaid.py  sync.py  transactions.py
app/core/: database.py  logging.py  security.py  settings.py
app/models/: __init__.py  account.py  balance_snapshot.py  holding.py  item.py  security.py  transaction.py  user.py
app/schemas/: __init__.py  account.py  analytics.py  balance.py  base.py  holding.py  item.py  security.py  sync.py  transaction.py  user.py
app/services/: analytics.py  auth.py  plaid.py  repositories.py  sync.py
app/workers/: __init__.py  __main__.py  sync_worker.py
infra/: docker-compose.yml  render.yaml
infra/codex_cloud/: README.md  maintenance.sh  setup.sh
scripts/: init_db.py  manage_codex_cloud.sh
tests/: test_sync_orchestrator.py
