[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finance-api"
version = "0.1.0"
description = "FastAPI backend for personal finance data aggregation using Plaid."
authors = [{ name = "Ethan", email = "ethan@example.com" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.1",
  "sqlalchemy[asyncio]>=2.0.28",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "pydantic>=2.6.3",
  "pydantic-settings>=2.2.1",
  "httpx>=0.27.0",
  "plaid-python>=16.2.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "apscheduler>=3.10.4",
  "slowapi>=0.1.8",
  "loguru>=0.7.2",
  "sentry-sdk>=1.40.6",
  "cryptography>=42.0.5",
  "python-dateutil>=2.8.2",
  "orjson>=3.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.5",
  "httpx[http2]>=0.27.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
